feat: ui supports view file

--- a/assets/index.html
+++ b/assets/index.html
@@ -122,7 +122,7 @@
     </div>
     <div class="editor-page hidden">
       <div class="not-editable hidden"></div>
-      <textarea id="editor" class="editor hidden" title="Edit file" cols="10"></textarea>
+      <textarea id="editor" class="editor hidden" aria-label="Editor" cols="10"></textarea>
     </div>
   </div>
   <script>
