--- a/assets/index.html
+++ b/assets/index.html
@@ -77,6 +77,7 @@
       <input id="search" title="Searching for folders or files" name="q" type="text" maxlength="128" autocomplete="off" tabindex="1">
       <input type="submit" hidden />
     </form>
+    <input class="hidden max-uploads" type="number" name="max-uploads" id="max-uploads-input" placeholder="Max Number of Uploads" pattern="[0-9]+">
     <div class="toolbox-right">
       <div class="login-btn hidden" title="Login for upload/move/delete/edit permissions">
         <svg width="16" height="16" viewBox="0 0 16 16">
