feat: add bulk deletion on the web UI
- add Multi-selected
- enable delete in bulk on web-ui

--- a/assets/index.html
+++ b/assets/index.html
@@ -103,6 +103,7 @@
     </div>
   </div>
   <div class="main">
+   <div id="delete-btn" class="hidden"></div>
     <div class="index-page hidden">
       <div class="empty-folder hidden"></div>
       <table class="uploaders-table hidden">
