--- a/assets/index.html
+++ b/assets/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-  <div class="head">
+  <div class="head" id="head">
     <div class="breadcrumb"></div>
     <div class="toolbox">
       <a href="" class="control download hidden" title="Download file" download="">
@@ -74,7 +74,8 @@
             d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z" />
         </svg>
       </div>
-      <input id="search" title="Searching for folders or files" name="q" type="text" maxlength="128" autocomplete="off" tabindex="1">
+      <input id="search" title="Searching for folders or files" name="q" type="text" maxlength="128" autocomplete="off"
+        tabindex="1">
       <input type="submit" hidden />
     </form>
     <div class="toolbox-right">
@@ -102,7 +103,7 @@
       </div>
     </div>
   </div>
-  <div class="main">
+  <div class="main" id="main">
     <div class="index-page hidden">
       <div class="empty-folder hidden"></div>
       <table class="uploaders-table hidden">
