moved inline-styling to css

--- a/assets/index.html
+++ b/assets/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width" />
   <link rel="icon" type="image/x-icon" href="__ASSETS_PREFIX__favicon.ico">
   <link rel="stylesheet" href="__ASSETS_PREFIX__index.css">
-  <div id="index-data" style="display: none;">__INDEX_DATA__</div>
+  <div id="index-data">__INDEX_DATA__</div>
   <script src="__ASSETS_PREFIX__index.js"></script>
 </head>
 
