--- a/assets/index.html
+++ b/assets/index.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes" />
   <meta name="description" content="Dufs - A distinctive utility file server" />
+  <meta name="theme-color" content="#2563eb" />
   <noscript>
     <meta http-equiv="refresh" content="0; url=?noscript">
   </noscript>
